--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -61,7 +61,7 @@
                 <div class="col-sm-12 pt-3 pb-3">
                     <div class="module-wrap">
                         <a href="{{ path('roster_map', {'group': 'members', 'map': map.code}) }}">
-                            <img class="img-fluid" src="{{ image(image_header_path(map.image)).zoomCrop(1110,222) }}"/>
+                            <img class="img-fluid" src="{{ image(image_header_path(map.imageHeader)).zoomCrop(1110,222) }}"/>
                             <div class="module-description-layer">
                                 <p class="module-description">{{ map.name | upper }}</p>
                             </div>
