--- a/templates/roster/_user_module.html.twig
+++ b/templates/roster/_user_module.html.twig
@@ -15,6 +15,6 @@
            title="Mission"></i>
     {% else %}
         <i class="fa fa-book-reader fa-2x text-warning mr-3"
-           title="Cadet"></i>
+           title="Débutant"></i>
     {% endif %}
 {% endif %}
