--- a/templates/perun/instance.html.twig
+++ b/templates/perun/instance.html.twig
@@ -33,8 +33,8 @@
                                 {% if onlinePlayer.player.user is not null %}
                                     {% if onlinePlayer.player.user.member %}
                                         <i class="fa fa-user text-success" title="Membre"></i>
-                                    {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\UserModule::LEVEL_CADET') %}
-                                        <i class="fa fa-book-reader text-success" title="Cadet"></i>
+                                    {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\UserModule::LEVEL_ROOKIE') %}
+                                        <i class="fa fa-book-reader text-success" title="Débutant"></i>
                                     {% else %}
                                         <i class="fa fa-user text-primary" title="Invité"></i>
                                     {% endif %}
