--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,6 +31,11 @@
                                 <input type="password" name="password" id="inputPassword" class="form-control" required>
                             </div>
 
+                            <div class="form-group">
+                                <label for="remember_me">Se souvenir de moi</label>
+                                <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+                            </div>
+
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                             <button class="btn btn-lg btn-primary form-control" type="submit">
