--- a/templates/roster/index.html.twig
+++ b/templates/roster/index.html.twig
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-sm-12 pt-3 pb-3">
                     <div class="">
-                        <img class="img-fluid" src="{{ image(image_header_path(selectedMap.imageHeader)).zoomCrop(1110,222) }}"/>
+                        <img class="img-fluid" src="{{ image(image_header_path(selectedMap.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
                         <div class="module-roster-description-layer">
                             <p class="">{{ selectedMap.name | upper }}</p>
                         </div>
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-sm-12 pt-3 pb-3">
                     <div class="">
-                        <img class="img-fluid" src="{{ image(image_header_path(selectedAircraft.imageHeader)).zoomCrop(1110,222) }}"/>
+                        <img class="img-fluid" src="{{ image(image_header_path(selectedAircraft.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
                         <div class="module-roster-description-layer">
                             <p class="">{{ selectedAircraft.name | upper }}</p>
                         </div>
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-sm-12 pt-3 pb-3">
                     <div class="">
-                        <img class="img-fluid" src="{{ image(image_header_path(selectedHelicopter.imageHeader)).zoomCrop(1110,222) }}"/>
+                        <img class="img-fluid" src="{{ image(image_header_path(selectedHelicopter.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
                         <div class="module-roster-description-layer">
                             <p class="">{{ selectedHelicopter.name | upper }}</p>
                         </div>
