--- a/templates/admin/module/view.html.twig
+++ b/templates/admin/module/view.html.twig
@@ -57,7 +57,7 @@
                 <div class="card mb-3">
                     <h3 class="card-header">Image</h3>
                     <div class="card-body">
-                        <img class="img-fluid" src="{{ image(file_path(module.image)).zoomCrop(1000,560) }}"/>
+                        <img class="img-fluid" src="{{ image(file_path(module.image)).zoomCrop(1000,560).jpeg }}"/>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <div class="card mb-3">
                     <h3 class="card-header">Image (Header)</h3>
                     <div class="card-body">
-                        <img class="img-fluid" src="{{ image(file_path(module.imageHeader)).zoomCrop(1110,222) }}"/>
+                        <img class="img-fluid" src="{{ image(file_path(module.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
                     </div>
                 </div>
             </div>
