--- a/templates/admin/dcs/perun-player/remove_link.html.twig
+++ b/templates/admin/dcs/perun-player/remove_link.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin/layout.html.twig' %}
 {% set libKilikTable=true %}
 {% set section="admin" %}
-{% set subSection="player" %}
+{% set subSection="perun-player" %}
 
 {% block pageContent %}
     <div class="row mb-4">
@@ -18,7 +18,7 @@
                         {{ form_errors(form) }}
                         <div class="row">
                             <div class="col-sm-6">
-                                <a href="{{ path('admin_dcs_player_view', {'player': player.id}) }}"
+                                <a href="{{ path('admin_dcs_perun_player_view', {'player': player.id}) }}"
                                    class="btn btn-lg btn-primary form-control">
                                     <i class="fa fa-arrow-circle-left"></i> Annuler
                                 </a>
