--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -83,10 +83,10 @@
             <div class="sidebar-heading">
                 DCS
             </div>
-            <li class="nav-item{% if section == "dcs" and subSection == "player" %} active{% endif %}">
-                <a class="nav-link" href="{{ path("admin_dcs_player_list") }}">
+            <li class="nav-item{% if section == "dcs" and subSection == "perun-player" %} active{% endif %}">
+                <a class="nav-link" href="{{ path("admin_dcs_perun_player_list") }}">
                     <i class="fas fa-users"></i>
-                    <span>Joueurs</span>
+                    <span>Joueurs (Perun)</span>
                 </a>
             </li>
             <li class="nav-item{% if section == "dcs" and subSection == "module" %} active{% endif %}">
