--- a/templates/admin/default/index.html.twig
+++ b/templates/admin/default/index.html.twig
@@ -31,11 +31,11 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                <a href="{{ path('admin_dcs_player_list') }}">Joueurs DCS</a></div>
+                                <a href="{{ path('admin_dcs_perun_player_list') }}">Joueurs DCS (Perun)</a></div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{ total.dcsPlayers }}</div>
                         </div>
                         <div class="col-auto">
-                            <a href="{{ path('admin_dcs_player_list') }}"><i class="fas fa-gamepad fa-2x text-gray-300"></i></a>
+                            <a href="{{ path('admin_dcs_perun_player_list') }}"><i class="fas fa-gamepad fa-2x text-gray-300"></i></a>
                         </div>
                     </div>
                 </div>
