display website version (version updated on each release)

--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -40,7 +40,8 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">VEAF Website</div>
+                <div class="sidebar-brand-text mx-3">VEAF</div>
+                <div>{{ app_version }}</div>
             </a>
 
             <!-- Divider -->
