--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -24,7 +24,7 @@
 {% block header %}
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="/" class="navbar-brand"><img src="{{ cdn_veaf }}/img/site-logo.png" class="logo-navbar"></a>
+            <a href="/" class="navbar-brand" title="v{{ app_version }}"><img src="{{ cdn_veaf }}/img/site-logo.png" class="logo-navbar"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
