fix news link by discord and facebook links

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -31,8 +31,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="/" class="nav-link"><span class="fa fa-newspaper"></span> Les nouvelles</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="news"><span
+                                    class="fa fa-newspaper"></span> Les nouvelles
+                            <span class="caret"></span></a>
+                        <div class="dropdown-menu" aria-labelledby="news">
+                            <a href="https://discord.gg/KSgGtcFQ" class="dropdown-item" target="_blank"><span class="fab fa-discord"></span> Discord</a>
+                            <a href="http://www.facebook.com/veairforce/" class="dropdown-item" target="_blank"><span class="fab fa-facebook"></span> Facebook</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a href="https://community.veaf.org/" class="nav-link" target="_blank"><span class="fa fa-envelope"></span>
