--- a/templates/admin/module/list.html.twig
+++ b/templates/admin/module/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/layout.html.twig' %}
 {% set libKilikTable=true %}
-{% set section="admin" %}
+{% set section="dcs" %}
 {% set subSection="module" %}
 
 {% block pageContent %}
