--- a/templates/default/office.html.twig
+++ b/templates/default/office.html.twig
@@ -13,7 +13,7 @@
         <div class="row mb-3">
             <div class="col-md-4">
                 <div class="card bg-primary mb-3" style="max-width: 20rem;">
-                    <div class="card-header text-center">Présidence<br/><i class="fa fa-dollar-sign fa-4x"></i></div>
+                    <div class="card-header text-center">Présidence<br/><i class="fa fa-crown fa-4x"></i></div>
                     <div class="card-body">
                         <h4 class="card-title">Président</h4>
                         <p class="card-text">{% if president is not null %}{{ president.nickname }}{% else %}-{% endif %}</p>
