close #105 fix same background color for all office members

--- a/templates/default/office.html.twig
+++ b/templates/default/office.html.twig
@@ -12,7 +12,7 @@
         </p>
         <div class="row mb-3">
             <div class="col-md-4">
-                <div class="card bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
                     <div class="card-header text-center">Présidence<br/><i class="fa fa-crown fa-4x"></i></div>
                     <div class="card-body">
                         <h4 class="card-title">Président</h4>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
                     <div class="card-header text-center">Secrétariat<br/><i class="fa fa-pen-alt fa-4x"></i></div>
                     <div class="card-body">
                         <h4 class="card-title">Secrétaire</h4>
