add specials modules on landing page, close #108

--- a/templates/roster/index.html.twig
+++ b/templates/roster/index.html.twig
@@ -16,6 +16,9 @@
                 {% if selectedHelicopter is defined and selectedHelicopter is not null %}
                     {% set routeParams=routeParams|merge({'helicopter': selectedHelicopter.code}) %}
                 {% endif %}
+                {% if selectedSpecial is defined and selectedSpecial is not null %}
+                    {% set routeParams=routeParams|merge({'special': selectedSpecial.code}) %}
+                {% endif %}
                 <a href="{{ path(app.request.get('_route'), routeParams) }}"
                    class="btn {% if group == groupSelected %}btn-info{% else %}btn-primary{% endif %}">{{ groupLabel }}</a>
             {% endfor %}
@@ -29,6 +32,8 @@
                class="btn {% if tab == "aircrafts" %}btn-info{% else %}btn-primary{% endif %}">{{ tabs['aircrafts'] }}</a>
             <a href="{{ path('roster_helicopters', {'group': groupSelected}) }}"
                class="btn {% if tab == "helicopters" %}btn-info{% else %}btn-primary{% endif %}">{{ tabs['helicopters'] }}</a>
+            <a href="{{ path('roster_specials', {'group': groupSelected}) }}"
+               class="btn {% if tab == "specials" %}btn-info{% else %}btn-primary{% endif %}">{{ tabs['specials'] }}</a>
         </div>
     </div>
 
@@ -70,6 +75,21 @@
                         <img class="img-fluid" src="{{ image(image_header_path(selectedHelicopter.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
                         <div class="module-roster-description-layer">
                             <p class="">{{ selectedHelicopter.name | upper }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
+    {% if selectedSpecial is defined and selectedSpecial is not null %}
+        <div class="container container-main mb-3">
+            <div class="row">
+                <div class="col-sm-12 pt-3 pb-3">
+                    <div class="">
+                        <img class="img-fluid" src="{{ image(image_header_path(selectedSpecial.imageHeader)).zoomCrop(1110,222).jpeg }}"/>
+                        <div class="module-roster-description-layer">
+                            <p class="">{{ selectedSpecial.name | upper }}</p>
                         </div>
                     </div>
                 </div>
