--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,7 @@
         {% endif %}
         {% if libHighcharts is defined and libHighcharts == true %}
         <script src="//code.highcharts.com/4.1.8/highcharts.js"></script>
+        <script src="//code.highcharts.com/4.1.8/modules/heatmap.js"></script>
         <script src="//code.highcharts.com/4.1.8/modules/exporting.js"></script>
         {% endif %}
     {% endblock head %}
